<resources>
    <string name="app_name">TourPhone</string>
    <string name="api_url">http://api.tourphone.com:1077/</string>
    <string name="auth">Авторизация</string>
    <string name="registration">Registration</string>
    <string name="info1">TourPhone does not consume internet traffic. Have a nice tour!</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="forget_password">Forgot password?</string>
    <string name="enter">Enter</string>
    <string name="need_help">Need help?</string>
    <string name="surname">Surname</string>
    <string name="name">Name</string>
    <string name="organization">Organization</string>
    <string name="next">Next</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="save_password">Save password</string>
    <string name="thx_for_register">Thank you for registering. Our manager will contact you.</string>
    <string name="enable_bt">Turn on Bluetooth</string>
    <string name="enable_wifi">Turn on WiFi</string>
    <string name="enable_headphones">Connect the headset</string>
    <string name="gid">Guide</string>
    <string name="tourist">Tourist</string>
    <string name="scan_qr_code">To start the tour, scan the QR Code</string>
    <string name="enter_code">Enter the code</string>
    <string name="error_code">Invalid code</string>
    <string name="error_update">Failed to refresh the tour page</string>
    <string name="error_permission">Permissions not granted</string>
    <string name="enter_to_last">Connect to the last excursion</string>
    <string name="excursion">Excursion</string>
    <string name="plan_excursion">Excursion plan</string>
    <string name="enter_code_dialog">Enter code to connect to the broadcast</string>
    <string name="code">Code</string>
    <string name="enter_all">Fill in all fields!</string>
    <string name="error_auth">Failed to log in</string>
    <string name="need_permission">Further work is possible only after granting permissions</string>
    <string name="get_permission">Get permission</string>
</resources>